--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script src="external/jquery-2.1.4.js"></script>
 	<script src="omniweb-utils.js"></script>
 	<script src="external/three.js"></script>
 	<script src="keyboard.js"></script>
