saving current state before attempting arcball changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="Shaders.js"></script>
 	<script src="THREESegment.js"></script>
 </head>
-<body style="margin: 0px; overflow: hidden; background: #fff">
+<body style="margin: 0px; overflow: hidden; background: #000">
 	<canvas id="overlay" style="position: absolute; top: 0px; left: 0px;"></canvas>
 	<div id="webGLContainer"></div>
 	<div id="console" style="positon: fixed;"></div>
