--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
 	<script src="RotateCubeControls.js"></script>
 	<script src="Shaders.js"></script>
 	<script src="THREESegment.js"></script>
+	<link rel="stylesheet" href="style.css" />
 </head>
 <body style="margin: 0px; overflow: hidden; background: #000">
-	<canvas id="overlay" style="position: absolute; top: 0px; left: 0px;"></canvas>
+	<button id="submitTask">Submit</button>
+	<!-- <canvas id="overlay" style="position: absolute; top: 0px; left: 0px;"></canvas> -->
 	<div id="webGLContainer"></div>
-	<div id="console" style="positon: fixed;"></div>
+	<!-- <div id="console" style="positon: fixed;"></div> -->
+
+	<div id="results">
+		<div id="message">Result</div>
+		<div id="accuracy">accuracy: <span id="accuracyValue">99.1%</span></div>
+		<div id="next">
+		<div id="taskId"><input id="taskIdInput" type="text" value="task id..." /><button>Play</button></div>
+		</div>
+	</div>
 </body>
 <script src="main.js"></script>
 </html>
