ready for testing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
 		<div id="message">Result</div>
 		<div id="accuracy">accuracy: <span id="accuracyValue">99.1%</span></div>
 		<div id="next">
-		<div id="taskId"><input id="taskIdInput" type="text" value="task id..." /><button>Play</button></div>
+		<div id="taskId"><input id="taskIdInput" type="text" placeholder="task id..." /><button id="assignTask">Play</button></div>
+		</div>
+		<div>
+		Tutorial Cubes:
+		<ol>
+<li>332</li>
+<li>1444</li>
+<li>1449</li>
+<li>1455</li>
+<li>1458</li>
+<li>1460</li>
+<li>1467</li>
+<li>1475</li>
+<li>1481</li>
+<li>1496</li>
+</ol>
 		</div>
 	</div>
 </body>
