almost ready for presentation

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<script src="external/jquery-2.1.4.js"></script>
+	<script src="consensus_testing.js"></script>
 	<script src="omniweb-utils.js"></script>
 	<script src="external/three.js"></script>
 	<script src="keyboard.js"></script>
@@ -17,6 +18,22 @@
 	<!-- <canvas id="overlay" style="position: absolute; top: 0px; left: 0px;"></canvas> -->
 	<div id="webGLContainer"></div>
 	<!-- <div id="console" style="positon: fixed;"></div> -->
+
+	<div id="validationInfo">
+		<div id="conVer">NEW CONSENSUS</div>
+		<div id="taskNum">Task: #0</div>
+		<div id="user">user id</div>
+		<div id="weight">weight</div>
+		<div id="p0p1">p0 p1</div>
+		<div id="segProb">seg prob</div>
+		<div id="totalWeight">total weight</div>
+
+
+		<div id="overSize">Over Size</div>
+		<div id="underSize">Under Size</div>
+
+		<div id="accuracy">Accuracy</div>
+	</div>
 
 	<div id="results">
 		<div id="message">Result</div>
