--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
 		<div id="underSize">Under Size</div>
 
 		<div id="accuracy">Accuracy</div>
+
+
+		<div>
+			<ul>
+				<li><div class="colorBox seed"></div>Seed</li>
+				<li><div class="colorBox added"></div>Added</li>
+				<li><div class="colorBox agreed"></div>Agreed</li>
+				<li><div class="colorBox overcolor"></div>Over Color</li>
+				<li><div class="colorBox undercolor"></div>Under Color</li>
+				<li><div class="colorBox removed"></div>Removed</li>
+			</ul>
+		</div>
 	</div>
 
 	<div id="results">
