--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script src="RotateCubeControls.js"></script>
 	<script src="Shaders.js"></script>
 	<script src="THREESegment.js"></script>
+	<script src="marchingcubes.js"></script>
 </head>
 <body style="margin: 0px; overflow: hidden; background: #fff">
 	<canvas id="overlay" style="position: absolute; top: 0px; left: 0px;"></canvas>
