asm marching cubes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script src="Shaders.js"></script>
 	<script src="THREESegment.js"></script>
 	<link rel="stylesheet" href="style.css" />
+	<script src="asm/marching_cubes.js"></script>
 </head>
 <body style="margin: 0px; overflow: hidden; background: #000">
 	<button id="submitTask">Submit</button>
