re-added hover preview, moved it to separate file, playing with drag select/deselect

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script src="RotateCubeControls.js"></script>
 	<script src="Shaders.js"></script>
 	<script src="THREESegment.js"></script>
+	<script src="hoverpreview.js"></script>
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body style="margin: 0px; overflow: hidden; background: #000">
